--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,20 @@
-#logo1 {
+.container {
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+
+h1 {
+  text-align: center;
+}
+
+form {
+  margin-bottom: 50px;
+}
+
+.card-header {
+  font-weight: bold;
+}
+
+.strong {
   font-weight: bold;
 }
