Fix bug with error message and tidy code

--- a/src/styles.css
+++ b/src/styles.css
@@ -5,7 +5,8 @@
 
 #site-title {
   text-align: center;
-  font-family: 'Lalezar', cursive;
+  font-family: 'Faster One', cursive;
+  /* font-family: 'Lalezar', cursive; */
   font-size: 100px;
 }
 
@@ -36,6 +37,13 @@ body{
   text-align: right;
   font-style: italic;
 
+}
+
+#showErrors {
+  text-align: center;
+  font-size: 20px;
+  color: red;
+  font-family: 'Press Start 2P', cursive;
 }
 
 .card-header:hover {
